--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "saynt-website",
+  "name": "my-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,8 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "lucide-react": "^0.556.0",
     "next": "16.0.7",
     "react": "19.2.0",
+    "react-calendar": "^6.0.0",
     "react-dom": "19.2.0"
   },
   "devDependencies": {
@@ -18,11 +20,9 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "autoprefixer": "^10.4.22",
     "eslint": "^9",
     "eslint-config-next": "16.0.7",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.17",
+    "tailwindcss": "^4",
     "typescript": "^5"
   }
 }
